# Password-manager

./: .gitignore  README.md  mytool.spec  pm.spec  pyproject.toml  vault.json
.password_manager/: meta.json  vault.enc
cli/: commands.py
core/: crypto.py  service.py  session.py  storage.py  vault.py
models/: PasswordEntry.py  user.py
tests/: conftest.py  test_cli.py  test_crypto.py  test_storage.py  test_vault.py  test_web.py
web/: app.py  deps.py  main.py  schemas.py  session_store.py
web/static/: app.js  index.html  style.css
