[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-manager"
version = "0.1.0"
description = "A CLI password manager"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "cryptography>=42",
    "pyperclip>=1.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "httpx>=0.27"]

[project.scripts]
pm = "cli.commands:cli"
pm-web = "web.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
